fix footer spacing

--- a/frontend/app/components/footer.module.scss
+++ b/frontend/app/components/footer.module.scss
@@ -58,6 +58,7 @@
     padding-bottom: 10rem;
     &:first-child {
       border-right: 1px solid var(--black);
+      padding: 3rem 2rem 5rem 2rem;
       @media screen and (max-width: 800px) {
         border-right: none;
         padding: 3rem 1rem 5rem;
